# WeatherApp

./: .gitignore  new_f  new_f.py  new_file.py  pyproject.toml
WeatherApp/: settings.py
weather/: models.py  views.py
